--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -93,6 +93,7 @@ img {
     top: 5px;
     display: block;
     color: red;    /*  Colorie l'icone en rouge   */
+    background-color: white;
   }
 
   .topnav a i {
@@ -102,7 +103,7 @@ img {
 
 @media screen and (max-width: 768px) {
   .topnav.responsive {
-    position: relative;
+  /*  position: relative;  */
   }
 
   .topnav.responsive .icon {
@@ -130,7 +131,8 @@ img {
     float: right;
     display: block;
     top: 5px;
-    color: red;    /*  Colorie l'icone en rouge   */
+    color: red; /*  Colorie l'icone en rouge   */
+    background-color: white;
   }
 
   /* Diminue la taille du logo et l'aligne comme l'icone du menu */
@@ -585,7 +587,8 @@ footer {
   }
 
   .hero-section {
-    max-height: 93vh; /*min-height: unset;  */
+  /*  max-height: 80vh; /*min-height: unset;  */
+    height: auto;
     margin-bottom: 0; /*  Densifie l'écran */
     font-weight: bolder;
   }
@@ -621,9 +624,7 @@ footer {
   .hero-section {
     display: block;
     box-shadow: unset;
-    max-height: 93vh; /*unset;  */
-    /*  min-height: unset; */
-    /*  Supprime la hauteur mini de la section                   */
+    min-height: 93vh;  /*  min-height: unset; */
     padding: 0;     /*  Supprime padding et margin-bottom pour écran plus dense  */
     margin-bottom: 0;
   }
@@ -650,8 +651,70 @@ footer {
   .hero-text {
     width: unset;
     font-size: 1.2rem;
+    margin-top: 25px;  /* Réduit l'espace entre titre et texte */
+  }
+  
+  .hero-img img {
+    border-radius: 10px;
+    margin-top: 25px;    /*  Diminue l'espace entre texte et image */
   }
 
+  .hero-section>.btn-signup {
+    display: block;
+    margin: 31px auto 0px;
+    font-size: 20px;    /*  Diminue la taille de la police              */
+    padding: 10px 25px;    /*  Diminue la taille totale du bouton          */
+  }
+
+  .copyrights {
+    margin-top: 15px;    /*  Diminue l'espace entre le bouton et le copyright */
+    font-size: 15px;    /*  Diminue la taille de la police                   */
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .main {
+    margin: 45px 0 45px 45px;
+  }
+
+  .topnav {
+    margin-bottom: 1.0%;
+  }
+
+  .hero-section {
+    display: block;
+    box-shadow: unset;
+    max-height: unset;
+    padding: 0;     /*  Supprime padding et margin-bottom pour écran plus dense  */
+    margin-bottom: 0;
+  }
+
+  .hero-content {
+    background: #fff;
+    color: #000;
+    padding: 0;  /*  modifie la largeur   */
+  }
+
+  .hero-content::after {
+    content: unset;
+  }
+
+  .hero-content .btn-signup {
+    display: none;
+  }
+
+  .hero-headline {
+    font-size: 3.0rem;
+    white-space: normal;
+  }
+
+  .hero-text {
+    width: unset;
+    font-size: 1.2rem;
+    margin-top: 25px;  /* Réduit l'espace entre titre et texte */
+  }
+  
   .hero-img img {
     border-radius: 10px;
     margin-top: 25px;    /*  Diminue l'espace entre texte et image */
@@ -672,6 +735,70 @@ footer {
 }
 
 @media screen and (max-width: 420px) {
+  .main {
+    margin: 10px;
+    font-size: 75%;
+  }
+
+  .topnav {
+    margin-bottom: 1.0%;
+  }
+
+  .hero-section {
+    display: block;
+    box-shadow: unset;
+    min-height: unset;
+    max-height: unset;  
+    padding: 0;    /*  Supprime padding et margin-bottom pour écran plus dense  */
+    margin-bottom: 0;
+  }
+
+  .hero-content {
+    background: #fff;
+    color: #000;
+    padding: 0;    /*  Prend toute la largeur de la section  */
+  }
+
+  .hero-content::after {
+    content: unset;
+    height: unset;  /* Supprime la hauteur de 100 % */
+  }
+
+  .hero-content .btn-signup {
+    display: none;
+  }
+
+  .hero-headline {
+    font-size: 2.2rem;
+    white-space: normal;
+  }
+
+  .hero-text {
+    width: unset;
+    margin-top: 17px;  /* Réduit l'espace entre titre et texte */
+    font-size: 11px;
+  }
+
+  .hero-img img {
+    border-radius: 10px;
+    margin-top: 10px;    /*  Diminue l'espace entre texte et image */
+  }
+
+  .hero-section>.btn-signup {
+    display: block;
+    margin: 31px auto 0px;
+    font-size: 12px;    /*  Diminue la taille de la police              */
+    padding: 6px 15px;    /*  Diminue la taille totale du bouton          */
+  }
+
+  .copyrights {
+    font-size: 12px;    /*  Diminue la taille de la police              */
+    margin-top: 10px;    /*  Diminue l'espace entre le bouton et le copyright */
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 320px) {
   .main {
     margin: 10px;
     font-size: 75%;
@@ -712,7 +839,7 @@ footer {
 
   .hero-text {
     width: unset;
-    margin-top: 20px;
+    margin-top: 17px;  /* Réduit l'espace entre titre et texte */
     font-size: 11px;
   }
 
